--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
@@ -34,6 +33,11 @@
     "lint": "eslint --debug src",
     "lint:write": "eslint --debug --fix"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios|axios)/)"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.2.1",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
